# llama.cpp

./: .gitignore
.omc/sessions/: 2be8bcd4-c9c0-4ebe-aaab-f1a01ea8ce92.json
.omc/state/: subagent-tracking.json
common/npm-protocol/: npm-emu-protocol.h  npm-types.h
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-npm/: CMakeLists.txt  ggml-npm.cpp  ggml-npm.h  test-npm-standalone
ggml/src/ggml-npm/npm-device/: npm-device-common.cpp  npm-device-emulator.cpp  npm-device-mock.cpp  npm-device.h  npm-shm.h
tests/: CMakeLists.txt
tests/npm/: CMakeLists.txt  test-npm-backend.cpp  test-npm-device.cpp  test-npm-emulator.cpp  test-npm-inference.cpp
tools/: CMakeLists.txt
tools/npm-emulator/: CMakeLists.txt  main.cpp  npm-config.h  npm-dma-model.cpp  npm-dma-model.h  npm-emu-server.cpp  npm-emu-server.h  npm-memory-model.cpp  npm-memory-model.h  npm-trace.cpp  npm-trace.h
